src/test/ui/const-generics/issues/issue-76595.stderr
error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/issue-76595.rs:15:5
   |
LL |     test::<2>();
   |     ^^^^^^^^^ expected 1 type argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
